# rest-api-template

./: .env_example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 06f8d9263380_update_datetime_with_tz.py  63f5222673d1_update_task.py  6ecc6e1d1026_update_task_index.py  8037a85bae46_init.py  fb99efe26f92_add_task_detail.py
src/rest_api_template/: __main__.py  main.py
src/rest_api_template/configs/: env.py
src/rest_api_template/core/base/: repository.py
src/rest_api_template/db/: engine.py  models.py
src/rest_api_template/dtos/: __init__.py  task.py
src/rest_api_template/modules/links/: repository.py  router.py
src/rest_api_template/modules/links/dtos/: link.py
src/rest_api_template/modules/tasks/: repository.py  router.py
src/rest_api_template/routers/: links.py  tasks.py
vscode/: settings.json
